Added base layout plus some other logic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Svelte + TS</title>
   </head>
   <body data-theme="skeleton">
-    <div id="app" style="width: 100%;"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
